--- a/assignment_3/assignment_3.ipynb
+++ b/assignment_3/assignment_3.ipynb
@@ -106,7 +106,7 @@
     "        The array containing the final solutions.\n",
     "        \n",
     "    t: array-like\n",
-    "        Derivative of the function f.\n",
+    "        Time array to be put into the integrator.\n",
     "        \n",
     "    sigma: float\n",
     "        The dimensionless Prandtl number (the ratio of the kinematic viscosity to the\n",
